# wwshell-work

./: MD5_Performance_Analysis.md  README.md  check_doc_files.sh  check_md5.sh  steup_docker.sh  tcpreplay_stress_tester.sh  yzm.sh
.cursor/rules/: mcp.json  ww.mdc
Go/: COMMAND_LINE_COMMENT_FIX.md  DEPLOYMENT.md  Makefile  README.md  build.py  deploy_comment_fix.sh  go.mod
Go/cmd/: main.go
Go/configs/: config.env
Go/scripts/: config-watcher.sh  install.sh  uninstall.sh
H3C/: README.md  checkkunlunxin  hardware_info.sh  install.sh  network_config.sh  performance.sh  utils.sh
H3C/check/: .gitignore  build.py  docx_checker.spec  install.bat  pyproject.toml  readme.md  requirements.txt  start_checker.bat  test_heading4.docx  test_simple.py
H3C/check/config/: default_config.json
H3C/check/h3c_doc_checker/: README.md  __init__.py  __main__.py  batch_processor.py  check_env.py  config.py  create_icon.py  gui.py  main.py  splash.py  utils.py
H3C/check/h3c_doc_checker/checkers/: H3C 异构服务器  厂商_xx加速卡_xx模型推理（训练）测试指导.docx  __init__.py  content_checker.py  cs.docx  font_checker.py  table_checker.py  test_checker.py  title_checker.py
H3C/check/h3c_doc_checker/config/: Model_Guidance.json  default_config.json
H3C/check/src/: create_icon.py
H3C/config/: default.conf
H3C/release/: Directory_Monitor_README.md  Readme.md  SVN_Compare_README.md  manager.sh  (+14 more)
git/: 111.vue  bushu.bat  gitcommit.sh  gitsum.sh  gitsum.shell  gitsum_multi.sh  perforcemen.sh
jacoco/: jacococli.sh  msctl.sh
java/: cookieloganalysis.sh  yzm.sh
liunx/: dish.sh
mysql/: mysqlmonitor.sh
(+18 files in other folders)
